--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -1,6 +1,7 @@
 body {
-    color:darkred;
+    color: #A20021 ;
     text-align:center;
+    background-color: #f9eae1
 }
 
 text:hover {
@@ -12,7 +13,7 @@ button {
     line-height: 60px;
     font-weight: bold;
     padding: 0 40px;
-    background: salmon;
+    background: #CC8B86;
     border: none;
 }
 
