--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -1,7 +1,7 @@
 body {
     color: #A20021 ;
     text-align:center;
-    background-color: #f9eae1
+    background-color: #f9eae1;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
