--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -3,8 +3,22 @@ body {
     text-align:center;
     background-color: #f9eae1;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
+
+}
+h1 {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 50px ;
 }
 
+div {
+    height: 100%;
+    width: 100%;
+    vertical-align: middle;
+}
+a {
+    color: black;
+    text-decoration: none;
+}
 button {
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     margin-top: 20px;
@@ -14,4 +28,5 @@ button {
     background: #CC8B86;
     border: none;
     color: black;
+    font-size: 150%;
 }
