--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -21,12 +21,12 @@ a {
 }
 button {
     font-family: "Comic Sans MS", "Comic Sans", cursive;
-    margin-top: 20px;
-    line-height: 60px;
+    margin-top: 2%;
     font-weight: bold;
-    padding: 0 40px;
+    padding: 0 5%;
     background: #CC8B86;
     border: none;
     color: black;
     font-size: 150%;
+    line-height: 60px;
 }
