--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -1,6 +1,7 @@
 .flex-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 
@@ -21,11 +22,6 @@ header {
     background-color: #f9eae1;
 }
 
-div {
-    height: 100%;
-    width: 100%;
-    vertical-align: middle;
-}
 a {
     color: black;
     text-decoration: none;
