--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -15,8 +15,8 @@
 body {
     color: black;
     text-align:center;
-    background-color: #CC8B86 ;
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
+    background-color: #F9EAE1 ;
+    font-family: 'Raleway', sans-serif;
 
 }
 
@@ -34,7 +34,6 @@ a {
     text-decoration: none;
 }
 button {
-    font-family: "Comic Sans MS", "Comic Sans", cursive;
     margin-top: 2%;
     font-weight: bold;
     padding: 0 5%;
