--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -1,7 +1,10 @@
-.flex-container {
+.flex-container-footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    justify-content: space-evenly;
+    vertical-align: bottom;
+    background-color:#F9EAE1;
 }
 
 .header {
@@ -15,8 +18,8 @@
 body {
     color: black;
     text-align:center;
-    background-color: #CC8B86 ;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
+    margin: 0;
 
 }
 
