--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -12,6 +12,9 @@
     margin: 0;
     padding: 0;
 }
+.flex-container-table {
+    display: flex;
+}
 
 .flex-container-middle {
     background-color: white;
