--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -1,15 +1,36 @@
-@media screen only and (min-width:500px) {}
+@media screen and (min-width:500px) {
+
+    .flex-container-footer {
+        flex-direction: row;
+        left: 0;
+        position: fixed;
+        bottom: 0;
+    }
+
+    .nav {
+        font-size: 18px;
+    }
+
+}
+@media screen and (max-width:500px) {
+
+    .flex-container-footer {
+
+        flex-direction: column;
+        position: relative;
+        align-content: center;
+    }
+    .nav {
+        font-size: 100%;
+    }
+}
 
 .flex-container-footer {
     display: flex;
-    flex-direction: row;
     justify-content: center;
     justify-content: space-evenly;
     align-content: stretch;
     background-color:#F9EAE1;
-    position: fixed;
-    bottom: 0;
-    left: 0;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -28,7 +49,6 @@
     background-color: #F9EAE1;
     margins: 0px;
     width: 25%;
-    font-size: 18px;
     line-height: 250%;
 }
 
