--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -25,9 +25,7 @@
 
 
     .flex-container-middle {
-        display: block;
-        border: blue;
-        border-width: 10px;
+        border: 10px blue;
         flex-wrap: wrap;
         overflow: auto;
         min-height: 400px;
@@ -39,7 +37,7 @@
         flex-direction: column;
         align-content: center;
         overflow: scroll;
-        positon: absolute;
+        position: absolute;
         bottom: -50px;
     }
 
@@ -79,7 +77,7 @@
 /*Desktop */
 .nav {
     background-color: #F9EAE1;
-    margins: 0px;
+    margin: 0;
     width: 25%;
     line-height: 250%;
 }
@@ -136,6 +134,4 @@ a {
     color: black;
     font-size: 150%;
     line-height: 60px;
-}
-
 }
