--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -10,6 +10,7 @@
 
     .nav {
         font-size: 18px;
+        width: 25%;
     }
 
     .blockText {
@@ -27,7 +28,6 @@
     .flex-container-middle {
         border: 10px blue;
         flex-wrap: wrap;
-        overflow: auto;
         min-height: 400px;
         display: contents;
     }
@@ -37,12 +37,12 @@
         flex-direction: column;
         align-content: center;
         overflow: scroll;
-        position: absolute;
-        bottom: -50px;
+
     }
 
     .nav {
         font-size: 100%;
+        width: 100%;
         right: 0;
         left: 0;
     }
@@ -58,27 +58,32 @@
     }
 }
 
+.allContainer {
+    overflow: auto;
+    flex-direction: column;
+}
+
 .flex-container-footer {
     display: flex;
     justify-content: space-evenly;
-    align-content: stretch;
     background-color: #F9EAE1;
     width: 100%;
     margin: 0;
     padding: 0;
+    align-content: baseline;
 }
 
 .flex-container-middle {
     background-color: white;
     justify-content: center;
     padding: 60px;
+    height: 30%;
 }
 
 /*Desktop */
 .nav {
     background-color: #F9EAE1;
     margin: 0;
-    width: 25%;
     line-height: 250%;
 }
 
@@ -96,6 +101,7 @@
     background: #A20021;
     color: #F9EAE1;
     font-size: 20px;
+    margin: 0;
 }
 
 .blockText {
@@ -110,7 +116,7 @@ body {
     color: black;
     text-align: center;
     margin: 0;
-    font-family: 'Raleway', sans-serif;
+    /*font-family: 'Raleway', sans-serif;*/
     background-color: #F9EAE1;
 }
 
