--- a/availableRoomsStyle.css
+++ b/availableRoomsStyle.css
@@ -40,6 +40,10 @@ button:hover {
     background: #DC9B96;
 }
 
+button:disabled {
+	background: #666666;
+}
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -79,12 +83,14 @@ td:hover {
 }
 
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
+	margin: auto;
+	border: 12px solid #f3f3f3; /* Light grey */
+	border-top: 12px solid #3498db; /* Blue */
+	border-radius: 50%;
+	width: 60px;
+	height: 60px;
+	animation: spin 2s linear infinite;
+	margin-bottom: 30px;
 }
 
 @keyframes spin {
