--- a/availableRoomsStyle.css
+++ b/availableRoomsStyle.css
@@ -82,15 +82,25 @@ td:hover {
     background: #EEDEDE;
 }
 
+.greyed {
+    position:fixed;
+    width:100%;
+    height:100%;
+    background:#000000;
+    z-index:100;
+    opacity: 0.2;
+}
 .loader {
+    margin-top:10%;
 	border: 12px solid #f3f3f3; /* Light grey */
-	border-top: 12px solid #3498db; /* Blue */
+	border-top: 12px solid #F3752B; /* Orange */
 	border-radius: 50%;
-	width: 20%;
-	height: 20%;
+	width: 10%;
+    height:0;
+    padding-bottom: 10%;
 	animation: spin 2s linear infinite;;
     position:fixed;
-    margin-left:50%;
+    margin-left:45%;
 }
 
 @keyframes spin {
