--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -1,8 +1,8 @@
 .allContainer {
     display: flex;
     flex-direction: column;
-    overflow: scroll;
     align-content: space-evenly;
+    height: 100%;
 }
 
 .flex-container-footer {
@@ -62,7 +62,6 @@ body {
     text-align: center;
     margin: 0;
     /*font-family: 'Raleway', sans-serif;*/
-    background-color: purple;
 }
 
 h1 {
