--- a/AllStyle.css
+++ b/AllStyle.css
@@ -3,3 +3,7 @@ body {
     margin: 0px;
     background-color: orange;
 }
+h1 {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 50px;
+}
