--- a/screenSizeChanges.css
+++ b/screenSizeChanges.css
@@ -19,7 +19,8 @@
         padding-left: 35%;
     }
 
-    .flex-container-middle {
+    .flex-container-table{
+
     }
 
 }
@@ -55,6 +56,8 @@
         padding-left: 15%;
         padding-right: 15%;
     }
+
+
 
 
 }
