--- a/screenSizeChanges.css
+++ b/screenSizeChanges.css
@@ -20,8 +20,10 @@
     }
 
     .flex-container-table{
-
+        width: 75%;
+        align-content: center;
     }
+
 
 }
 
@@ -58,10 +60,13 @@
     }
 
     .flex-container-table {
-        max-width: 500px;
+        width: 100%;
         max-font-size: 12px;
     }
 
+    .tableTime {
+        width: 100%;
+    }
 
 
 
