--- a/AllStyle.css
+++ b/AllStyle.css
@@ -26,3 +26,14 @@ text {
 .nav a {
     display: block;
 }
+
+.flex-container-footer {
+
+    display: flex;
+    justify-content: space-evenly;
+    align-content: baseline;
+    background-color: #F9EAE1;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
