the things that should be centered are centered once more

--- a/screenSizeChanges.css
+++ b/screenSizeChanges.css
@@ -62,13 +62,13 @@
 
     .flex-container-table {
         width: 100%;
+        padding-left: 0;
+        padding-right: 0;
         max-font-size: 12px;
     }
 
     .tableTime {
         width: 100%;
     }
-
-
 
 }
