--- a/availableRoomsStyle.css
+++ b/availableRoomsStyle.css
@@ -1,6 +1,8 @@
+
 h1 {
     font-size: xx-large;
-    text-align: center
+    text-align: center;
+    z-index: 75;
 }
 
 .flex-container-table {
@@ -42,7 +44,7 @@ button:hover {
 }
 
 button:disabled {
-	background: #666666;
+    background: #666666;
 }
 
 table {
@@ -87,37 +89,51 @@ td:hover {
 }
 
 .greyed {
-    position:fixed;
-    width:100%;
-    height:100%;
-    background:#000000;
-    z-index:100;
-    opacity: 0.2;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    z-index: 100;
+    opacity: 0.3;
 }
+
 .loader {
-    margin-top:10%;
-	border: 12px solid #f3f3f3; /* Light grey */
-	border-top: 12px solid #F3752B; /* Orange */
-	border-radius: 50%;
-	width: 10%;
-    height:0;
+    margin-top: 10%;
+    border: 12px solid #f3f3f3; /* Light grey */
+    border-top: 12px solid #F3752B; /* Orange */
+    border-radius: 50%;
+    width: 10%;
+    height: 0;
     padding-bottom: 10%;
-	animation: spin 2s linear infinite;;
-    position:fixed;
-    margin-left:45%;
-    z-index:101;
+    animation: spin 2s linear infinite;;
+    position: fixed;
+    margin-left: 45%;
+    z-index: 101;
+}
+
+.hiddenImage {
+    position: fixed;
+    vertical-align: center;
+    horiz-align: center;
+    visibility: hidden;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-img{
-    max-width:90%;
+img {
+    max-width: 90%;
     max-height: 90%;
 }
 
-a{
-    display:block;
+a {
+    display: block;
 }
