--- a/AllStyle.css
+++ b/AllStyle.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Gloria Hallelujah', cursive;
     margin: 0px;
-    background-color: orange;
+    background-color: #F9EAE1;
 }
 h1 {
     font-family: 'Permanent Marker', cursive;
@@ -18,6 +18,7 @@ text {
     margin: 0;
     line-height: 250%;
     text-align: center;
+    flex-grow: 1;
 }
 
 .nav:hover {
@@ -37,6 +38,7 @@ text {
     width: 100%;
     margin: 0;
     padding: 0;
+    align-items: flex-end;
 }
 
 a {
