--- a/AllStyle.css
+++ b/AllStyle.css
@@ -45,3 +45,24 @@ a {
     color: black;
     text-decoration: none;
 }
+
+
+button {
+    margin: 5px;
+    color: #442222;
+    background: #CC8B86;
+    min-width: 100px;
+    min-height: 50px;
+
+    border: 0;
+    min-font-size: 30px;
+
+}
+
+button:hover {
+    background: #DC9B96;
+}
+
+button:disabled {
+    background: #666666;
+}
