undid changes that i did not intend to make

--- a/availableRoomsStyle.css
+++ b/availableRoomsStyle.css
@@ -14,6 +14,18 @@ h1 {
 
 }
 
+button {
+    margin: 5px;
+    color: #442222;
+    background: #CC8B86;
+    min-width: 100px;
+    min-height: 50px;
+
+    border: 0;
+    min-font-size: 30px;
+
+}
+
 .button {
     margin: 0;
     display: block;
@@ -25,6 +37,13 @@ h1 {
 
 }
 
+button:hover {
+    background: #DC9B96;
+}
+
+button:disabled {
+    background: #666666;
+}
 
 table {
     flex-grow: 1;
