--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -47,7 +47,9 @@ header {
 
 
 .theBigButton {
+    margin-top: 2%;
     font-weight: bold;
+    width: 20%;
     background: #CC8B86;
     border: none;
     color: black;
