--- a/FirstPageStyle.css
+++ b/FirstPageStyle.css
@@ -1,7 +1,6 @@
 .allContainer {
     display: flex;
     flex-direction: column;
-    max-height: 100%;
 }
 
 
@@ -12,13 +11,12 @@
     justify-content: center;
     flex-direction: column;
     padding: 2%;
-    min-height: 100%;
-
+    height: 53vh;
 }
 
 
 .header {
-    padding: 1%;
+    height: 40%;
     text-align: center;
     background: #A20021;
     color: #F9EAE1;
@@ -30,7 +28,7 @@
     padding-top: 15px;
     padding-bottom: 15px;
     horiz-align: center;
-    text-align: justify;
+    text-align: center;
     background: #FFFFFF;
 }
 
@@ -47,7 +45,7 @@ header {
 
 
 .theBigButton {
-    margin-top: 2%;
+    margin-top: 2vh;
     font-weight: bold;
     width: 20%;
     background: #CC8B86;
