--- a/screenSizeChanges.css
+++ b/screenSizeChanges.css
@@ -6,13 +6,14 @@
         align-content: flex-end;
         flex-grow: 1;
         margin-bottom: fill;
-        position: absolute;
+        position: fixed;
         bottom: 0;
     }
 
     .nav {
         font-size: 18px;
         width: 25%;
+        height: 5vh;
     }
 
     .blockText {
@@ -34,8 +35,12 @@
 
 
     .theBigButton {
-        width: 20%;
-        height: 300%;
+        width: 25%;
+        height: 120%;
+    }
+
+    .allContainer {
+        height: 100vh;
     }
 
 
@@ -67,6 +72,7 @@
         right: 0;
         left: 0;
         border-top: 1px solid #DAB8B8;
+        line-height: 250%;
     }
 
     .blockText {
