--- a/availableRoomsStyle.css
+++ b/availableRoomsStyle.css
@@ -89,8 +89,9 @@ td:hover {
 
 .greyed {
     position: fixed;
+    margin-top:-5vh;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: #000000;
     z-index: 100;
     opacity: 0.3;
