--- a/availableRoomsStyle.css
+++ b/availableRoomsStyle.css
@@ -58,15 +58,17 @@ table {
 
 td, th {
     text-align: center;
-    min-width: 1000%;
+
+
 }
 
 th {
     border: 0 solid #422;
-    background: #A20021;
+    background: #442222;
     font-weight: bold;
     height: 5vh;
     color: #EEEEEE;
+    width:50%;
 }
 
 td {
@@ -91,7 +93,7 @@ td:hover {
     position: fixed;
     margin-top:-5vh;
     width: 100%;
-    height: 100vh;
+    height: 95vh;
     background: #000000;
     z-index: 100;
     opacity: 0.3;
