updated about us

--- a/screenSizeChanges.css
+++ b/screenSizeChanges.css
@@ -49,6 +49,10 @@
 /*mobile*/
 @media screen and (max-width: 500px) {
 
+    .header{
+        font-size: large;
+    }
+
 
     .flex-container-middle {
         padding: 10%;
