slowly fixing mobile buttons

--- a/screenSizeChanges.css
+++ b/screenSizeChanges.css
@@ -96,8 +96,8 @@
     }
 
     .theBigButton {
-        width: 80%;
-        line-height: 300%;
+        width: 100%;
+        height: 20vh;
     }
 
     .button {
