--- a/screenSizeChanges.css
+++ b/screenSizeChanges.css
@@ -1,5 +1,5 @@
 /*desktop*/
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 700px) {
 
     .flex-container-footer {
         flex-direction: row;
@@ -22,7 +22,7 @@
         padding-left: 35%;
     }
 
-    .flex-container-table{
+    .flex-container-table {
         width: 75%;
         padding-left: 12.5%;
         padding-right: 12.5%;
@@ -43,13 +43,18 @@
         height: 100vh;
     }
 
+    table {
+
+        width: 100%
+    }
+
 
 }
 
 /*mobile*/
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
 
-    .header{
+    .header {
         font-size: large;
     }
 
@@ -91,10 +96,6 @@
         max-font-size: 12px;
     }
 
-    .tableTime {
-        width: 100%;
-    }
-
     .theBigButton {
         width: 100%;
         height: 9vh;
@@ -102,7 +103,15 @@
     }
 
     .button {
-        font-size: 200%;
+        font-size: 100%;
+        width: 15vw;
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+    }
+
+    table {
+        width: 70vw;
     }
 
 }
