--- a/AllStyle.css
+++ b/AllStyle.css
@@ -14,6 +14,15 @@ text {
     font-family: 'Gloria Hallelujah', cursive;
 }
 
+
+button:hover {
+    background: #DC9B96;
+}
+
+button:disabled {
+    background: #888888;
+}
+
 .nav {
     background-color: #F9EAE1;
     margin: 0;
